apps/atuin/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: atuin
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: atuin
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: atuin-ingress
  namespace: atuin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: atuin
      app.kubernetes.io/instance: atuin
      app.kubernetes.io/name: atuin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
